Set overflow-y to scroll (fixes layout shift when page overflows)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-y: scroll;
+}
+
 .faq-answer a {
     text-decoration: underline;
 }
